--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
 <!-- Main Body -->
 <body class="container">
-  <header class="headerGrid">
+  <header>
     <nav>
         <!-- Link to run page offline OR on github -->
         <h1><a href="/Restaurant-Reviews-Projects-Stage-One/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent" class="main-grid">
+  <main id="maincontent">
     <section id="map-container">
       <div id="map" aria-label="Map of restaurants" role="application"></div>
     </section>
