--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class="container">
   <header>
     <nav>
-        <!-- Link to run page offline OR on github -->
-        <h1><a href="/Restaurant-Reviews-Projects-Stage-One/">Restaurant Reviews</a></h1>
+        
+        <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
